// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Card Default 1`] = `
<div
  className="col-sm-12 pb-4"
  data-testid="card"
>
  <div>
    <a
      href="/#"
    >
      <span
        className="visually-hidden"
      >
        Storybookを使ってコンポーネントを管理しよう！
      </span>
      <div
        aria-hidden="true"
        data-testid="card-header"
        style={
          {
            "backgroundImage": " url(https://i.imgur.com/6B7WC7Dl.jpg)",
          }
        }
        title="Storybookを使ってコンポーネントを管理しよう！"
      />
    </a>
    <div>
      <div>
        <div>
          <span>
            2022-01-01
          </span>
          <a
            href="/tag/テスト"
            onClick={[Function]}
            title="テスト"
          >
            テスト
             
            
          </a>
          <a
            href="/tag/Storybook"
            onClick={[Function]}
            title="Storybook"
          >
            Storybook
             
            
          </a>
        </div>
        <a
          href="/#"
        >
          <h3>
            Storybookを使ってコンポーネントを管理しよう！
          </h3>
        </a>
        <p>
          こんにちはこんにちはこんにちはこんにちは！！
        </p>
        <a
          href="/#"
        >
          ....Read more....
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card No Tags 1`] = `
<div
  className="col-sm-12 pb-4"
  data-testid="card"
>
  <div>
    <a
      href="/#"
    >
      <span
        className="visually-hidden"
      >
        Storybookを使ってコンポーネントを管理しよう！
      </span>
      <div
        aria-hidden="true"
        data-testid="card-header"
        style={
          {
            "backgroundImage": " url(https://i.imgur.com/6B7WC7Dl.jpg)",
          }
        }
        title="Storybookを使ってコンポーネントを管理しよう！"
      />
    </a>
    <div>
      <div>
        <div>
          <span>
            2022-01-01
          </span>
        </div>
        <a
          href="/#"
        >
          <h3>
            Storybookを使ってコンポーネントを管理しよう！
          </h3>
        </a>
        <p>
          こんにちはこんにちはこんにちはこんにちは！！
        </p>
        <a
          href="/#"
        >
          ....Read more....
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Content Default 1`] = `
<div
  className="row post order-2"
>
  <header
    className="intro-header site-heading text-center col-xl-2 col-lg-3 col-xs-12 order-lg-1"
  >
    test Side Bar
  </header>
  <div
    className="col-xl-7 col-lg-6 col-md-12 col-sm-12 order-2 content"
  >
    <div
      dangerouslySetInnerHTML={
        {
          "__html": "<h2>見出し</h2><p>H2/H3/H4を基本的に利用する。</p><p>H1はブログヘッダーに適用されているため、content内で利用すると２重にH1を定義することになる。極力使わないこと。</p><h2>H2見出し</h2><h3>H3見出し</h3><h4>H4見出し</h4><h5>H5見出し</h5><h2>リスト</h2><p>個人的趣味により、olは使ってない</p><ul><li>1</li><li>2<ul><li>2-1</li><li>2-2<ul><li>2-2-1</li><li>2-2-2</li></ul></li></ul></li></ul><h2>インライン要素</h2><p>この文章は途中で<em style='font-style: italic;'>イタリック(itaric)</em>になったり<strong>太文字(strong)</strong>になったり<del>打ち消し(delete)</del>たり忙しい文章です。</p><p>このように<a href='#'>リンク</a>を作ったり</p><blockquote><p>芸術は爆発だ！</p><cite>芸術は爆発だ! 岡本太郎痛快語録</cite></blockquote><p>引用を使ったり</p><div class="gatsby-highlight has-highlighted-lines" data-language="javascript"><pre style="counter-reset: linenumber 4" class="language-javascript line-numbers"><code class="language-javascript"><span class="token comment">// In your gatsby-config.js
</span>
<span class="gatsby-highlight-code-line"><span class="token literal-property property">plugins</span><span class="token operator">:</span> <span class="token punctuation">[</span></span>  <span class="token punctuation">{</span>
    <span class="token literal-property property">resolve</span><span class="token operator">:</span> <span class="token template-string"><span class="token template-punctuation string">\`</span><span class="token string">gatsby-transformer-remark</span><span class="token template-punctuation string">\`</span></span><span class="token punctuation">,</span>
    <span class="token literal-property property">options</span><span class="token operator">:</span> <span class="token punctuation">{</span>
      <span class="token literal-property property">plugins</span><span class="token operator">:</span> <span class="token punctuation">[</span>
        <span class="token template-string"><span class="token template-punctuation string">\`</span><span class="token string">gatsby-remark-prismjs</span><span class="token template-punctuation string">\`</span></span><span class="token punctuation">,</span>
      <span class="token punctuation">]</span>
    <span class="token punctuation">}</span>
  <span class="token punctuation">}</span>
<span class="token punctuation">]</span></code><span aria-hidden="true" class="line-numbers-rows" style="white-space: normal; width: auto; left: 0;"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></span></pre></div><p>コードブロックを使うこともできます。(コードブロックは<a href='https://www.gatsbyjs.com/plugins/gatsby-remark-prismjs/'>gatsby-remark-prismjs-title</a>で作ってます。)</p><div class="gatsby-highlight" data-language="shell"><pre class="language-shell"><code class="language-shell"><span class="command-line-prompt"><span data-user="alice" data-host="dev.localhost"></span></span><span class="token function">npm</span> run build</code></pre></div><p>コマンドラインを表現することもできます。</p><h2>テーブル</h2><table><thead><tr><th>Head</th><th>Head</th><th>Head</th></tr></thead><tbody><tr><td>Text</td><td>Text</td><td>Text</td></tr><tr><td>Text</td><td>Text</td><td>Text</td></tr><tr><td>Text</td><td>Text</td><td>Text</td></tr><tr><td>Text</td><td>Text</td><td>Text</td></tr></tbody></table><h2>サンプル文章: 私の個人主義</h2><p>それは当時同時にわが＃「共について事のためからするなませ。最も生涯に楽ようもしきりにその約束ですませでもをよしがいるたがも通知売っただて、まだにも解らでませましです。背後が引き返しない訳はもし事実についたですで。とうとう岡田さんで希望家来そう意味に云っませ耳その家来あなたか発展をというご講演ですたずだろて、そうした生涯は私か肴世界中にありて、岡田さんの方に新聞のあれをよくご奨励としてあなた権力をご学習をもっように近頃小遠慮をできるですらしいて、もしはなはだ所有が取次いだからいなものをなりでない。それでただご傾向がしのはそう大変というたて、その個性にも向いたてに対して先生の困るて得るですない。</p><p>同じ後下働きの上この茫然はおれ上をきまっでかと木下さんでただすならまし、理由のほかでについて大留学ありなたので、世間の以上を学校で結果でもの人が先刻聴いばいるから、まだの生涯がなっばそのためがもし見つかりたますと見えるですのですから、憂ですたてどうお主義やりだ事ありたませ。</p><p>だから義務か立派か落第へやりまして、翌日上見識の教えてなりだろ中をお関係のたくさんを起しあるた。十月がもひとまず調っから担がなうたたて、とにかく現に起って学習もまだ大きくなのな。だからお講演からきてはいでのんから、道徳には、もう私かしながら作っせるないないするれですませと勤めから、図書館はするているでう。ぼんやりしかるにもともかく理科というかかるなければ、それをは今末ばかり私のお自覚は長く移ろいるないです。</p><p>私はもちろん留学の事にお学問は来からいるでしょですですなて、一一の大牢のまだ存じますという通用でて、またその主人の向背にいうせるて、私かへ私の空を蹂躙に亡びているですのなけれでしょと関係して試験説きしまいありあっ。故意にまた嘉納さんにつまり当然したのないたです。</p><p>槙さんはこう田舎にするで述べるたのましあるでし。（それでも学校が行っためありなですばありは伴っううと、）ぴたり教えだ原因に、dutyの会でも移れから知らという、元の腐敗も今日のためまで通じなっのに窮めないて答弁院出るてしまっですに対してお弟なけれのだ。これはのらくら自分をするですように怒りていただくたのませてしかしちょっと大森自分あるですだ。</p><p>しかしこれから三通りも時代がなっじゃ、ほかにいくら聞かたですとしと、ないたないてしかし不理解を買うませべき。道の場合から、どんなところに今からもたじゃ、場合上が必ず次第四一二円に思いまでの国家に、それか用いよまし汚辱にあっなたくさんはもうなりれものありて、どうしてももう少し腰で淋しいて、こういう事が用いのが高等なかっないできでた。または無論前一十一日の出れでもはしありとかいう非常なけれお話がして、後でその頃この時がさばくれなのない。しっくりに中腰から目下さいます十十口今に叱りて、何かしですながらいるんってのにそう使うです事ますと、至極しものに十分ないで、おそらく本国に得から教えているないです。</p><p>道がならとしが何かないのでしようにありばかり減っでだて、また仕方はよかっ事のして、私が基礎にただす来るから三カ所が一杯は一人はもう叱りと得るまでうのませ。</p><p>今日ですんか得通りに充たすから、その義務も立派ない高等ないとするうはずべきは思わならな、悪い性質のつどの考えです人ずみと気に入るがいただきうつもりますらしい。それで私は熱心ないと散らかすたらのですはない、公平たて直さましのんとしがそれの手の画がそんな用と記念探して来なけれます。学校をは主ずいくら変っばいるれるた場合と支に行ったり、取消を尊ぶとか、さて画がつけ加えと云っ材料が立つ一つ、横着ないば、やはりするてない人格が広めよたと読んて、権利に洗わて孔雀だけ国家までからし人間は云うだ。あるいは十分がはその知人の不愉快らを今に倒さあり時へ進んが無論比較受けてい今にし事だ。</p><p>だからこれはある時が云っ持っのた、使用の軍隊に帰着思いない仕方のもさたんでないは進んたです。もう私はこの大切だ火事に推しなりた、講演の申をすこぶる与えなかろで得るているますのない。もっともし二十一円であったが、内心には箸よりは何を学校のしだから殖やしですのと行きですた。あるいは絶対そう自分を食わせろて得るですまいと、任命にしかるに矛盾のようます。</p><p>どう大反抗より這入っようです品評もなるいなけれて、わがのにご諸君家を与えます。</p>",
        }
      }
      data-testid="innerHTML"
    />
    <div>
      <h2>
        tubone24にラーメンを食べさせよう！
      </h2>
      <p>
        ぽちっとな↓
      </p>
      <a
        href="https://www.buymeacoffee.com/tubone24"
      >
        <img
          alt="Buy me a ramen"
          src="https://img.buymeacoffee.com/button-api/?text=Buy me a ramen&emoji=🍜&slug=tubone24&button_colour=40DCA5&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Footer Default 1`] = `
<footer
  className="footer undefined"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12 text-center"
      >
        <p
          data-testid="architecture"
        >
          The source code for this blog is maintained on  
          <a
            className=""
            href="https://github.com/tubone24/blog"
            rel="external nofollow noopener"
            target="_blank"
          >
            GitHub.
          </a>
        </p>
        <p
          data-testid="copyright"
        >
          Copyright 
          <a
            className=""
            href="https://portfolio.tubone-project24.xyz/"
            rel="external nofollow noopener"
            target="_blank"
          >
            ©tubone24
          </a>
           
          <b>
            <a
              href="/"
            >
              tubone BOYAKI
            </a>
             
          </b>
          2017-
          2023
            
          <a
            href="/privacy-policies"
          >
            Privacy Policies
          </a>
             
          <a
            href="/sitemap-index.xml"
            title="sitemap"
          >
            Sitemap
          </a>
        </p>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Storyshots Components/Header Default 1`] = `
<div
  className="col-12 header"
  data-testid="header"
  id="header"
  style={
    {
      "padding": 0,
    }
  }
>
  <div
    style={
      {
        "backgroundImage": "linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url(https://i.imgur.com/6B7WC7D.jpg)",
      }
    }
  >
    <h1>
      テストテストテストテストテスト
    </h1>
    <div>
      <div>
        <picture>
          <source
            onClick={[Function]}
            srcSet="/assets/avater.webp"
            type="image/webp"
          />
          <img
            alt="tubone"
            onClick={[Function]}
            src="/assets/avater.png"
          />
        </picture>
        <span>
          tubone
        </span>
      </div>
      <span>
        2022/04/25
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Navbar Default 1`] = `
<nav
  className="navbar navbar-expand-md sticky-top  navbar-night"
  id="m-navbar"
  title="navbar"
>
  <div
    className="container"
  >
    <button
      className="undefined navbar-brand btn btn-default"
      data-testid="logo"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        data-testid="logo-img"
        height="45"
        src="/assets/logo3.svg"
        width="135"
      />
      <h1
        className="visually-hidden"
      >
        Japanese IT Developer's Blog tubone BOYAKI
      </h1>
    </button>
    <button
      aria-label="navbar-toggler"
      className="undefined navbar-toggler"
      data-bs-target="#navbarSupportedContent"
      data-bs-toggle="collapse"
      type="button"
    >
      <span
        className="icon-bars"
      />
    </button>
    <div
      className="collapse navbar-collapse flex-row-reverse"
      id="navbarSupportedContent"
      role="navigation"
    >
      <ul
        className="undefined navbar-nav mr-2"
      >
        <li>
          <a
            className="nav-btn btn btn-link"
            href="/tags/"
            onClick={[Function]}
          >
            Tags
          </a>
        </li>
        <li>
          <a
            className="nav-btn btn btn-link"
            href="/about/"
            onClick={[Function]}
          >
            About
          </a>
        </li>
        <li>
          <a
            className="nav-btn btn btn-link"
            href="https://portfolio.tubone-project24.xyz/#contact"
            rel="external nofollow noopener"
            target="_blank"
          >
            Contact
          </a>
        </li>
        <li>
          <a
            className="nav-btn btn btn-link"
            href="https://portfolio.tubone-project24.xyz"
            rel="external nofollow noopener"
            target="_blank"
          >
            Portfolio
          </a>
        </li>
        <li>
          <a
            className="nav-btn btn btn-link"
            href="https://note.tubone-project24.xyz"
            rel="external nofollow noopener"
            target="_blank"
          >
            Note
          </a>
        </li>
        <li>
          <a
            className="nav-btn btn btn-link"
            href="https://tubone24.github.io/boyakifm/"
            rel="external nofollow noopener"
            target="_blank"
          >
            FM
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Components/SearchBox Empty Search Box 1`] = `
<div>
  <p>
    <label
      htmlFor="algolia-search-input"
    >
      <span
        className="icon-search"
      />
       SearchBox
    </label>
  </p>
  <input
    data-testid="algolia-search-input"
    id="algolia-search-input"
    placeholder="Enter the keyword..."
    type="search"
  />
</div>
`;

exports[`Storyshots Components/SearchBox Filled Search Box 1`] = `
<div>
  <p>
    <label
      htmlFor="algolia-search-input"
    >
      <span
        className="icon-search"
      />
       SearchBox
    </label>
  </p>
  <input
    data-testid="algolia-search-input"
    id="algolia-search-input"
    placeholder="Enter the keyword..."
    type="search"
  />
</div>
`;

exports[`Storyshots Components/ShareBox Default 1`] = `
<div
  data-testid="share-box"
  role="application"
>
  <a
    data-testid="facebook-link"
    href="https://www.facebook.com/sharer/sharer.php?u=test"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
    title="FacebookでShareする"
  >
    <span
      className="icon-facebook"
    />
  </a>
  <a
    data-testid="twitter-link"
    href="https://twitter.com/intent/tweet?text=LikeThis:&url=test"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
    title="TwitterでShareする"
  >
    <span
      className="icon-twitter"
    />
  </a>
  <a
    data-testid="pocket-link"
    href="http://getpocket.com/edit?url=test"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
    title="Pocketに追加する"
  >
    <span
      className="icon-get-pocket"
    />
  </a>
  <a
    data-hatena-bookmark-lang="ja"
    data-hatena-bookmark-layout="vertical-normal"
    data-testid="hatebu-link"
    href="http://b.hatena.ne.jp/add?mode=confirm&url=test"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
    title="このエントリーをはてなブックマークに追加"
  >
    <img
      alt="hatena bookmark"
      height="30"
      src="/assets/button-only@2x.png"
      width="30"
    />
  </a>
  <a
    className="undefined undefined"
    data-testid="CommentButton"
    href="#gitalk-container"
    onClick={[Function]}
    title="コメントする"
  >
    <span
      className="icon-comment"
    />
  </a>
  <a
    className="undefined undefined"
    data-testid="GotoTopButton"
    href="#header"
    onClick={[Function]}
    title="トップに戻る"
  >
    <span
      className="icon-chevron-up"
    />
  </a>
</div>
`;

exports[`Storyshots Components/Sidebar Default 1`] = `
<div
  className="row homepage"
  style={
    {
      "marginTop": 20,
    }
  }
>
  <header
    className="undefined site-heading text-center col-xl-2 col-lg-3 col-xs-12 order-lg-1"
  >
    <div>
      <a
        href="https://portfolio.tubone-project24.xyz/"
      >
        <picture>
          <source
            onClick={[Function]}
            srcSet="/assets/avater.webp"
            type="image/webp"
          />
          <img
            alt="tubone"
            decoding="async"
            onClick={[Function]}
            src="/assets/avater.png"
          />
        </picture>
      </a>
      <a
        href="https://portfolio.tubone-project24.xyz/"
        onClick={[Function]}
      >
        <h2>
          tubone
        </h2>
      </a>
      <p>
        It's my life
      </p>
      <a
        href="https://github.com/tubone24"
        rel="external nofollow noopener noreferrer"
        target="_blank"
        title="tubone24 github"
      >
        <span
          className="undefined fa-fw fa-2x"
        >
          <span
            className="icon-github"
          />
           
        </span>
      </a>
      <a
        href="https://soundcloud.com/user-453736300"
        rel="external nofollow noopener noreferrer"
        target="_blank"
        title="tubone24 SoundCloud"
      >
        <span
          className="undefined fa-fw fa-2x"
        >
          <span
            className="icon-soundcloud"
          />
           
        </span>
      </a>
      <a
        href="https://twitter.com/meitante1conan"
        rel="external nofollow noopener noreferrer"
        target="_blank"
        title="tubone24 twitter"
      >
        <span
          className="undefined fa-fw fa-2x"
        >
          <span
            className="icon-twitter"
          />
           
        </span>
      </a>
      <a
        href="https://500px.com/tubone24"
        rel="external nofollow noopener noreferrer"
        target="_blank"
        title="tubone24 500px"
      >
        <span
          className="undefined fa-fw fa-2x"
        >
          <span
            className="icon-500px"
          />
           
        </span>
      </a>
      <div
        className="d-none d-lg-block my-2"
      >
        <hr />
        <div>
          <p
            data-testid="latestArticleCount"
          >
            <span
              className="icon-newspaper-o"
            />
             Recent posts  6 / 
            8
          </p>
          <a
            href="https://blog.tubone-project24.xyz"
            onClick={[Function]}
          >
            testtest
          </a>
          <a
            href="https://blog.tubone-project24.xyz"
            onClick={[Function]}
          >
            testtest2
          </a>
          <a
            href="https://blog.tubone-project24.xyz"
            onClick={[Function]}
          >
            testtest
          </a>
          <a
            href="https://blog.tubone-project24.xyz"
            onClick={[Function]}
          >
            testtest2
          </a>
          <a
            href="https://blog.tubone-project24.xyz"
            onClick={[Function]}
          >
            testtest
          </a>
          <a
            href="https://blog.tubone-project24.xyz"
            onClick={[Function]}
          >
            testtest2
          </a>
        </div>
        <hr />
        <div
          data-testid="Archive"
        >
          <p>
            <span
              className="icon-calendar"
            />
             Archives
          </p>
          <a
            href="/2022/"
            onClick={[Function]}
            title="Articles written in 2022"
          >
            2022
          </a>
        </div>
        <hr />
        <div>
          <p>
            <span
              className="icon-cloud"
            />
             WordCloud
          </p>
          <a
            href="/about#wordcloud"
          >
            <picture>
              <source
                className="lozad"
                data-srcset="https://raw.githubusercontent.com/tubone24/auto_tweet_wordcloud/master/word_cloud_blog.webp"
                media="(min-width: 992px)"
                srcSet="data:image/gif;base64,R0lGODlhAQABAGAAACH5BAEKAP8ALAAAAAABAAEAAAgEAP8FBAA7"
                type="image/webp"
              />
              <source
                className="lozad"
                media="(max-width: 991px)"
                srcSet="data:image/gif;base64,R0lGODlhAQABAGAAACH5BAEKAP8ALAAAAAABAAEAAAgEAP8FBAA7"
                type="image/gif"
              />
              <img
                alt="wordCloud"
                className="lozad"
                data-src="https://raw.githubusercontent.com/tubone24/auto_tweet_wordcloud/master/word_cloud_blog.png"
                src="data:image/gif;base64,R0lGODlhAQABAGAAACH5BAEKAP8ALAAAAAABAAEAAAgEAP8FBAA7"
                title="wordCloud"
              />
            </picture>
          </a>
        </div>
        <hr />
      </div>
      <div>
        <p>
          <label
            htmlFor="algolia-search-input"
          >
            <span
              className="icon-search"
            />
             SearchBox
          </label>
        </p>
        <input
          data-testid="algolia-search-input"
          id="algolia-search-input"
          placeholder="Enter the keyword..."
          type="search"
        />
      </div>
      <hr />
      <div
        className="subscription"
      >
        <a
          className="undefined btn"
          href="/rss.xml"
          onClick={[Function]}
          role="button"
        >
          SUBSCRIBE RSS 
          <span
            className="fa-layers fa-fw fa-1x"
          >
            <span
              className="icon-rss"
            />
          </span>
        </a>
      </div>
      <hr />
      <div
        className="d-none d-lg-block information my-2"
      >
        <a
          href="/tags"
          title="Tags"
        >
          <p>
            <span
              className="icon-tags"
            />
             
            2
             / 
            2
             Tags
          </p>
        </a>
        <a
          href="/tag/test"
          onClick={[Function]}
          title="test"
        >
          test
           
          8
        </a>
        <a
          href="/tag/test2"
          onClick={[Function]}
          title="test2"
        >
          test2
           
          8
        </a>
      </div>
    </div>
  </header>
  <div
    className="col-xl-6 col-lg-7 col-md-12 col-xs-12 order-2"
  >
    aaa
  </div>
  <div
    className="col-xl-2 col-lg-1 order-3"
  />
</div>
`;

exports[`Storyshots Components/Subscription Default 1`] = `
<div
  className="subscription"
>
  <a
    className="undefined btn"
    href="/rss.xml"
    onClick={[Function]}
    role="button"
  >
    SUBSCRIBE RSS 
    <span
      className="fa-layers fa-fw fa-1x"
    >
      <span
        className="icon-rss"
      />
    </span>
  </a>
</div>
`;

exports[`Storyshots Components/Tag Default 1`] = `
<a
  href="/tag/test"
  onClick={[Function]}
  title="test"
>
  test
   
  4
</a>
`;

exports[`Storyshots Components/TimeToRead Default 1`] = `
<div
  data-testid="countdown"
>
  <span
    className="fa-layers fa-fw fa-1x"
  >
    <span
      className="icon-clock"
    />
  </span>
  この記事は
  <b>
    3
    文字
  </b>
  で
  <b>
    約
    4
    分
  </b>
  で読めます
</div>
`;

exports[`Storyshots Components/WordCloud Default 1`] = `
<div>
  <p>
    <span
      className="icon-cloud"
    />
     WordCloud
  </p>
  <a
    href="/about#wordcloud"
  >
    <picture>
      <source
        className="lozad"
        data-srcset="https://raw.githubusercontent.com/tubone24/auto_tweet_wordcloud/master/word_cloud_blog.webp"
        media="(min-width: 992px)"
        srcSet="data:image/gif;base64,R0lGODlhAQABAGAAACH5BAEKAP8ALAAAAAABAAEAAAgEAP8FBAA7"
        type="image/webp"
      />
      <source
        className="lozad"
        media="(max-width: 991px)"
        srcSet="data:image/gif;base64,R0lGODlhAQABAGAAACH5BAEKAP8ALAAAAAABAAEAAAgEAP8FBAA7"
        type="image/gif"
      />
      <img
        alt="wordCloud"
        className="lozad"
        data-src="https://raw.githubusercontent.com/tubone24/auto_tweet_wordcloud/master/word_cloud_blog.png"
        src="data:image/gif;base64,R0lGODlhAQABAGAAACH5BAEKAP8ALAAAAAABAAEAAAgEAP8FBAA7"
        title="wordCloud"
      />
    </picture>
  </a>
</div>
`;

exports[`Storyshots Pages/NotFoundPage Default 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="undefined col"
    >
      <h1>
        404 Not Found...
      </h1>
      <h2>
        Anything else...?
      </h2>
      <ul>
        <li>
          <a
            href="aaa"
          >
            aaa
          </a>
        </li>
        <li>
          <a
            href="bbb"
          >
            bbb
          </a>
        </li>
        <li>
          <a
            href="ccc"
          >
            ccc
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/tags Default 1`] = `
<div
  className="container"
>
  <div
    className="undefined row"
  >
    <div
      className="undefined col order-2"
    >
      <a
        href="/tag/foo"
        onClick={[Function]}
        title="foo"
      >
        foo
         
        3
      </a>
      <a
        href="/tag/bar"
        onClick={[Function]}
        title="bar"
      >
        bar
         
        2
      </a>
      <a
        href="/tag/hoge"
        onClick={[Function]}
        title="hoge"
      >
        hoge
         
        1
      </a>
      <a
        href="/tag/huga"
        onClick={[Function]}
        title="huga"
      >
        huga
         
        1
      </a>
      <a
        href="/tag/日本語"
        onClick={[Function]}
        title="日本語"
      >
        日本語
         
        1
      </a>
    </div>
  </div>
</div>
`;
